<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
                             http://maven.apache.org/xsd/maven-4.0.0.xsd">

    <!-- ================================================= -->
    <!--                 Projet DEMOLOTERIE               -->
    <!--        Fat‑jar Java FX autonome (Windows)         -->
    <!-- ================================================= -->

    <modelVersion>4.0.0</modelVersion>
    <groupId>org.example</groupId>
    <artifactId>demoloterie</artifactId>
    <version>1.0.0</version>
    <packaging>jar</packaging>

    <!-- =========================== -->
    <!--        Propriétés           -->
    <!-- =========================== -->
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <java.version>21</java.version>
        <javafx.version>21.0.2</javafx.version>
        <javafx.maven.plugin.version>0.0.8</javafx.maven.plugin.version>
        <!-- Plate‑forme cible pour les natives JavaFX -->
        <javafx.platform>win</javafx.platform>
    </properties>

    <!-- =========================== -->
    <!--        Dépendances          -->
    <!-- =========================== -->
    <dependencies>
        <!--
            *** RÈGLE CLÉ ***
            On utilise UNIQUEMENT les variantes « classifier=${javafx.platform} »
            pour éviter les doublons de module (classes + natives dans le même JAR).
        -->

        <!-- Module de base + natives -->
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-base</artifactId>
            <version>${javafx.version}</version>
            <classifier>${javafx.platform}</classifier>
        </dependency>

        <!-- Graphics (prism, glass, geometry, …) + natives -->
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-graphics</artifactId>
            <version>${javafx.version}</version>
            <classifier>${javafx.platform}</classifier>
        </dependency>

        <!-- Controls UI + natives (exclut base/graphics déjà déclarés) -->
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-controls</artifactId>
            <version>${javafx.version}</version>
            <classifier>${javafx.platform}</classifier>
            <exclusions>
                <exclusion>
                    <groupId>org.openjfx</groupId>
                    <artifactId>javafx-base</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>org.openjfx</groupId>
                    <artifactId>javafx-graphics</artifactId>
                </exclusion>
            </exclusions>
        </dependency>

        <!-- FXML + natives (exclut transitive controls) -->
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-fxml</artifactId>
            <version>${javafx.version}</version>
            <classifier>${javafx.platform}</classifier>
            <exclusions>
                <exclusion>
                    <groupId>org.openjfx</groupId>
                    <artifactId>javafx-controls</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>org.openjfx</groupId>
                    <artifactId>javafx-base</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>org.openjfx</groupId>
                    <artifactId>javafx-graphics</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <!-- JUnit for tests -->
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <version>5.10.2</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <!-- =========================== -->
    <!--         Construction        -->
    <!-- =========================== -->
    <build>
        <!-- Nom final simplifié du jar -->
        <finalName>demoloterie</finalName>

        <plugins>
            <!-- 1) Compilation Java -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.11.0</version>
                <configuration>
                    <release>${java.version}</release>
                </configuration>
            </plugin>

            <!-- 2) Plugin JavaFX pour mvn javafx:run (facultatif) -->
            <plugin>
                <groupId>org.openjfx</groupId>
                <artifactId>javafx-maven-plugin</artifactId>
                <version>${javafx.maven.plugin.version}</version>
                <configuration>
                    <mainClass>org.example.Launcher</mainClass>
                    <jvmArgs>
                        -Dprism.order=es2
                        -Dprism.vsync=true
                        -Dprism.text=t2k
                    </jvmArgs>
                </configuration>
            </plugin>

            <!-- 3) Fat‑jar Shade -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.5.1</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals><goal>shade</goal></goals>
                        <configuration>
                            <!-- Transform manifest pour java -jar -->
                            <transformers>
                                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                    <mainClass>org.example.Launcher</mainClass>
                                </transformer>
                                <!-- Fusion META-INF/services (JavaFX) -->
                                <transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer"/>
                            </transformers>

                            <!-- Garder toutes les classes : pas de minimisation -->
                            <minimizeJar>false</minimizeJar>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

            <!-- Run tests with JUnit 5 -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.2.5</version>
            </plugin>
        </plugins>
    </build>

</project>
